@@ -12,12 +12,22 @@
 
 
 /**
+ * This class is used for encapsulating various admin related functions
+ *
+ * @since 0.3.50
+ * @package ScoreRender
+*/
+class ScoreRenderAdmin
+{
+
+/**
  * Returns number of cached images inside cache directory
  *
  * @since 0.2
  * @return integer number of images inside cache directory, or -1 if cache dir can't be read
+ * @access private
  */
-function scorerender_get_num_of_images ()
+private function get_num_of_images ()
 {
 	global $sr_options;
 
@@ -36,8 +46,9 @@ function scorerender_get_num_of_images ()
  * Remove all cached images in cache directory
  *
  * @since 0.2
+ * @access private
  */
-function scorerender_remove_cache ()
+private function remove_cache ()
 {
 	global $sr_options;
 
@@ -45,7 +56,6 @@ function scorerender_remove_cache ()
 
 	while (false !== ($file = readdir ($handle)))
 	{
-		// FIXME: how to decide if some image is generated by plugin?
 		if (preg_match (REGEX_CACHE_IMAGE, $file))
 			@unlink ($sr_options['CACHE_DIR'] . DIRECTORY_SEPARATOR . $file);
 	}
@@ -69,7 +79,7 @@ function scorerender_remove_cache ()
  * @param string $url Cache URL
  * @return boolean Whether both point to the same location.
  */
-function scorerender_cache_location_match ($path, $url)
+private function cache_location_match ($path, $url)
 {
 	$retval = true;
 	/*
@@ -104,13 +114,13 @@ function scorerender_cache_location_match ($path, $url)
  * error encountered in various options. In some cases supplied
  * config values will be discarded.
  *
- * @uses scorerender_cache_location_match()
+ * @uses ScoreRenderAdmin::cache_location_match()
  * @uses transform_paths()
  * @uses ScoreRender::is_web_hosting()
  * @uses ScoreRender::is_prog_usable()
  * @uses scorerender_get_def_settings()
  */
-function scorerender_update_options ()
+private function update_options ()
 {
 	if ( function_exists ('current_user_can') && !current_user_can ('manage_options') )
 		wp_die (__('Cheatin&#8217; uh?', TEXTDOMAIN));
@@ -159,7 +169,7 @@ function scorerender_update_options ()
 	     ! in_array ('cache_dir_not_writable', $errmsgs) &&
 	     ! in_array ('cache_url_undefined'   , $errmsgs) )
 	{
-		if ( ! scorerender_cache_location_match ($newopt['CACHE_DIR'], $newopt['CACHE_URL']) )
+		if ( ! $this->cache_location_match ($newopt['CACHE_DIR'], $newopt['CACHE_URL']) )
 			$errmsgs[] = 'cache_dir_url_unmatch';
 	}
 
@@ -203,7 +213,7 @@ function scorerender_update_options ()
 			if ($sr_adm_msgs[$m]['level'] == MSG_WARNING)
 				echo '<div id="scorerender-error-' . $sr_adm_msgs[$m] . '" class="updated fade-800000"><p><strong>' . sprintf (__('WARNING: %s', TEXTDOMAIN), $sr_adm_msgs[$m]['content']) . "</strong></p></div>\n";
 			elseif ($sr_adm_msgs[$m]['level'] == MSG_FATAL)
-				echo '<div id="scorerender-error-' . $sr_adm_msgs[$m] . '" class="updated" style="background-color: #800000; color: white;"><p><strong>' . sprintf (__('ERROR: %s', TEXTDOMAIN), $sr_adm_msgs[$m]['content']) . "</strong></p></div>\n";
+				echo '<div id="scorerender-error-' . $sr_adm_msgs[$m] . '" class="error"><p><strong>' . sprintf (__('ERROR: %s', TEXTDOMAIN), $sr_adm_msgs[$m]['content']) . "</strong></p></div>\n";
 		}
 	}
 	else
@@ -218,7 +228,7 @@ function scorerender_update_options ()
  * @since 0.3
  * @access private
  */
-function scorerender_admin_head()
+public function admin_head()
 {
 ?>
 <style type="text/css">
@@ -242,7 +252,7 @@ function scorerender_admin_head()
  * @since 0.3.50
  * @access private
  */
-function scorerender_admin_footer()
+public function admin_footer()
 {
 	global $sr_options;
 ?>
@@ -284,7 +294,7 @@ jQuery(document).ready(function($){
  * @since 0.2
  * @access private
  */
-function scorerender_admin_section_path ()
+private function admin_section_path ()
 {
 	global $sr_options;
 ?>
@@ -327,7 +337,7 @@ function scorerender_admin_section_path ()
  * @since 0.2
  * @access private
  */
-function scorerender_admin_section_prog ()
+private function admin_section_prog ()
 {
 	global $sr_options;
 ?>
@@ -357,7 +367,7 @@ function scorerender_admin_section_prog ()
  * @since 0.2
  * @access private
  */
-function scorerender_admin_section_image ()
+private function admin_section_image ()
 {
 	global $sr_options;
 ?>
@@ -408,7 +418,7 @@ function scorerender_admin_section_image ()
  * @since 0.2
  * @access private
  */
-function scorerender_admin_section_content ()
+private function admin_section_content ()
 {
 	global $sr_options;
 ?>
@@ -455,17 +465,17 @@ function scorerender_admin_section_content ()
 /**
  * Section of admin page about caching options
  *
- * @uses scorerender_get_num_of_images()
+ * @uses ScoreRenderAdmin::get_num_of_images()
  * @since 0.2
  * @access private
  */
-function scorerender_admin_section_caching ()
+private function admin_section_caching ()
 {
 	global $sr_options;
 ?>
 	<h3><?php _e('Caching', TEXTDOMAIN) ?></h3>
 <?php
-$img_count = scorerender_get_num_of_images();
+$img_count = $this->get_num_of_images();
 
 if ( 0 > $img_count )
 {
@@ -494,33 +504,33 @@ else
  * Show WordPress admin page
  *
  * It also checks if form button is pressed, and may call
- * {@link scorerender_remove_cache()} or
- * {@link scorerender_update_options()} correspondingly.
+ * {@link ScoreRenderAdmin::remove_cache()} or
+ * {@link ScoreRenderAdmin::update_options()} correspondingly.
  *
- * @uses scorerender_remove_cache() Activated when 'Remove Cache' button is clicked
- * @uses scorerender_update_options() Activate when 'Update Options' button is clicked
- * @uses scorerender_admin_section_path() Admin page -- path options
- * @uses scorerender_admin_section_prog() Admin page -- program and file locations
- * @uses scorerender_admin_section_image() Admin page -- image options
- * @uses scorerender_admin_section_content() Admin page -- content options
- * @uses scorerender_admin_section_caching() Admin page -- caching administration
+ * @uses ScoreRenderAdmin::remove_cache() Activated when 'Remove Cache' button is clicked
+ * @uses ScoreRenderAdmin::update_options() Activate when 'Update Options' button is clicked
+ * @uses ScoreRenderAdmin::admin_section_path() Admin page -- path options
+ * @uses ScoreRenderAdmin::admin_section_prog() Admin page -- program and file locations
+ * @uses ScoreRenderAdmin::admin_section_image() Admin page -- image options
+ * @uses ScoreRenderAdmin::admin_section_content() Admin page -- content options
+ * @uses ScoreRenderAdmin::admin_section_caching() Admin page -- caching administration
  *
  * @access private
  */
-function scorerender_admin_options ()
+public function admin_page ()
 {
 	global $sr_options, $notations;
 
 	if ( isset($_POST['clear_cache']) && isset($_POST['ScoreRender']) )
 	{
 		check_admin_referer ('scorerender-update-options');
-		scorerender_remove_cache();
+		$this->remove_cache();
 	}
 
 	if ( isset($_POST['Submit']) && isset($_POST['ScoreRender']) )
 	{
 		check_admin_referer ('scorerender-update-options');
-		scorerender_update_options();
+		$this->update_options();
 	}
 ?>
 
@@ -543,19 +553,19 @@ function scorerender_admin_options ()
 
 <?php
 	// path options
-	scorerender_admin_section_path();
+	$this->admin_section_path();
 
 	// program location options
-	scorerender_admin_section_prog();
+	$this->admin_section_prog();
 
 	// image options
-	scorerender_admin_section_image();
+	$this->admin_section_image();
 
 	// content options
-	scorerender_admin_section_content();
+	$this->admin_section_content();
 
 	// caching options
-	scorerender_admin_section_caching();
+	$this->admin_section_caching();
 ?>
 	<p class="submit">
 	<input type="submit" name="Submit" class="button-primary" value="<?php _e('Update Options &raquo;', TEXTDOMAIN) ?>" />
@@ -567,13 +577,14 @@ function scorerender_admin_options ()
 }
 
 /**
- * Add extra link to entry in global plugin admin page, alongside the
- * Activate/Deactivate links
+ * Add 'Settings' link to entry in global plugin admin page, alongside the
+ * Activate/Deactivate links. This is used as a WP hook.
  *
+ * @param array $links Reference to array of links shown on plugin admin page
+ * @param string $file Part of plugin file name under plugin dir
  * @since 0.3.50
- * @access private
  */
-function scorerender_settings_link ($links, $file)
+public function settings_link ($links, $file)
 {
 	if ( $file == 'scorerender/wp-scorerender.php' )
 		if ( function_exists ('admin_url') )
@@ -587,32 +598,49 @@ function scorerender_settings_link ($links, $file)
 /**
  * Append submenu item into WordPress menu
  *
- * @uses scorerender_admin_head()
+ * @uses ScoreRenderAdmin::admin_head()
+ * @uses ScoreRenderAdmin::admin_footer()
+ * @uses ScoreRenderAdmin::admin_page()
+ */
+public function register_admin_page ()
+{
+	$plugin_page = add_options_page (__('ScoreRender options', TEXTDOMAIN), 'ScoreRender',
+			'manage_options', 'scorerender', array (&$this, 'admin_page'));
+	add_action('admin_head-' . $plugin_page, array (&$this, 'admin_head'));
+	add_action('admin_footer-' . $plugin_page, array (&$this, 'admin_footer'));
+}
+
+/**
+ * Output warning to tell users to turn off 'correct invalidly nested
+ * XHTML automatically' option.
+ */
+public function turn_off_balance_tags()
+{
+	echo '<div id="balancetag-warning" class="error"><p>' .
+		sprintf (__('<strong>OPTION CONFLICT</strong>: The &#8216;correct invalidly nested XHTML automatically&#8217; option conflicts with ScoreRender plugin, because it will mangle certain Lilypond and Mup fragments. The option is available in <a href="%s">Writing option page</a>.', TEXTDOMAIN), "options-writing.php") .
+		"</p></div>";
+}
+
+/**
+ * Class constructor, for adding wordpress admin related hooks
+ *
+ * @uses ScoreRenderAdmin::register_admin_page()
+ * @uses ScoreRenderAdmin::settings_link()
+ * @uses ScoreRenderAdmin::turn_off_balance_tags()
  * @access private
  */
-function scorerender_admin_menu ()
+public function __construct ()
 {
-	$plugin_page = add_options_page (__('ScoreRender options', TEXTDOMAIN), 'ScoreRender', 'manage_options', 'scorerender', 'scorerender_admin_options');
-	add_filter('admin_head-' . $plugin_page, 'scorerender_admin_head');
-	add_filter('admin_footer-' . $plugin_page, 'scorerender_admin_footer');
+	add_action ('admin_menu',            array (&$this, 'register_admin_page'));
+	add_filter ('plugin_action_links',   array (&$this, 'settings_link'), 10, 2);
+	if ( 0 != get_option('use_balanceTags') )
+		add_action ('admin_notices', array (&$this, 'turn_off_balance_tags'));
+
 }
 
+} // end class
 
-if ( 0 != get_option('use_balanceTags') )
-{
-	/**
-	 * @ignore
-	 */
-	function sr_turn_off_balance_tags()
-	{
-		echo '<div id="balancetag-warning" class="updated" style="background-color: #ff6666"><p>'
-			. sprintf (__('<strong>OPTION CONFLICT</strong>: The &#8216;correct invalidly nested XHTML automatically&#8217; option conflicts with ScoreRender plugin, because it will mangle certain Lilypond and Mup fragments. The option is available in <a href="%s">Writing option page</a>.', TEXTDOMAIN), "options-writing.php")
-			. "</p></div>";
-	}
-	add_filter ('admin_notices', 'sr_turn_off_balance_tags');
-}
+global $sr_admin;
+$sr_admin = new ScoreRenderAdmin();
 
-add_filter ('admin_menu', 'scorerender_admin_menu');
-
-add_filter ('plugin_action_links', 'scorerender_settings_link', 10, 2);
 ?>
